第2次修改，如下： 1.增加了一个activity  HomeActivity 和 OnCompletingActivity 2.设置 HomeActivity 底部按钮跳转至待完善界面。 3.设置 OnCompletingActivity 点击 界面任何位置 返回 至 home 4.新增加了 AppManager ，代码参考 开源中国 项目，负责管理 activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,20 @@
         <activity
             android:name=".activity.AppStart"
             android:launchMode="singleTop"
-            android:theme="@android:style/Theme.Black.NoTitleBar">
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.HomeActivity"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name=".activity.OnCompleting"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
     </application>
 
